<resources>
    <string name="app_name">UASAKB</string>
    <string name="hint_username">Username</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet?
        <b>Create one</b>
    </string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_member">Already a member?
        <b>Login</b>
    </string>
    <string name="logout">Logout</string>

    <string name="profile">profile</string>
    <string name="kontak">kontak</string>
    <string name="teman">teman</string>
    <string name="textInputLayout">textInputLayout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //LINK
    <string name="instagram">
        <a href="https://www.instagram.com/akhsanandra/">Follow</a>
    </string>
    <string name="line">
        <a href="http://line.me/ti/p/~akhsanaf">Add</a>
    </string>
    <string name="github">
        <a href="https://github.com/AkhsanAF">Follow</a>
    </string>
    <string name="facebook">
        <a href="https://web.facebook.com/akhsan.andraf">Akhsan Andra F</a>
    </string>
    <string name="gmail">
        <a href="mailto:akhsanandraf7@gmail.com">akhsanandraf7@gmail.com</a>
    </string>
    <string name="notlp">
        <a href="https://wa.me/6285966513500">+62 859 6651 3500</a>
    </string>
    <string name="namaprofile">Akhsan Andara Faturochman</string>
</resources>
